# notes_api

./: .env  Cargo.toml  README.md
.sqlx/: query-ee64d5a61d20526d9baecd6c2a9280b05ec10f38aa88f4faa569a54cc9f9423a.json
http/: notes.http
migrations/: 20240428123456_create_notes_table.sql
src/: app.rs  main.rs
src/auth/: jwks.rs  jwt.rs  middleware.rs  mod.rs  state.rs
src/auth/models/: claims.rs
src/db/: notes.rs
src/handlers/: mod.rs  notes.rs
src/models/: mod.rs  note.rs
src/routes/: notes.rs
src/state/: config.rs  db.rs  http.rs  mod.rs
