[package]
name = "notes-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = ["full"] }
state = "0.6.0"
sqlx = { version = "0.9.0-alpha.1", features = ["runtime-tokio", "postgres", "macros"] }
reqwest = { version = "0.13.2", features = ["json", "rustls"] }
dotenvy = "0.15.7"
jsonwebtoken = "10.3.0"
